fixed project container overflow

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1086,7 +1086,8 @@ nav {
     visibility: hidden;
     background: #111029;
     transition: all ease-in-out .25s;
-    overflow-x: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
 
     &.visible {
         transform: translate(0);
